--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,21 +1,23 @@
+version: '3.8'
+
 networks:
   network:
     external: true
 
 volumes:
-  db_data:
+  mongo_data:
 
 services:
-  db:
-    image: postgres:latest
-    container_name: db
+  mongodb:
+    image: mongo:latest
+    container_name: mongodb
     environment:
-      POSTGRES_USER: ${POSTGRES_USER}
-      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
-      POSTGRES_DB: ${POSTGRES_DB}
+      MONGO_INITDB_ROOT_USERNAME: ${MONGO_USER}
+      MONGO_INITDB_ROOT_PASSWORD: ${MONGO_PASSWORD}
+      MONGO_INITDB_DATABASE: ${MONGO_DB}
     ports:
-      - '${POSTGRES_PORT}:5432'
+      - '${MONGO_PORT}:27017'
     volumes:
-      - db_data:/var/lib/postgresql/data
+      - mongo_data:/data/db
     networks:
       - network
