feat: connection config

--- a/env.example
+++ b/env.example
@@ -2,8 +2,9 @@ NODE_ENV=development
 
 PORT=3000
 
-POSTGRES_USER=db_user
-POSTGRES_PASSWORD=db_password
+MONGODB_HOST=127.0.0.1
+MONGODB_PORT=27017
 POSTGRES_DB=db
-POSTGRES_PORT=5432
-POSTGRES_HOST=127.0.0.1
+MONGODB_USER=db_user
+MONGODB_PASSWORD=db_password
+
