--- a/env.example
+++ b/env.example
@@ -2,9 +2,9 @@ NODE_ENV=development
 
 PORT=3000
 
-MONGODB_HOST=127.0.0.1
-MONGODB_PORT=27017
-POSTGRES_DB=db
-MONGODB_USER=db_user
-MONGODB_PASSWORD=db_password
+MONGO_HOST=127.0.0.1
+MONGO_PORT=27017
+MONGO_DB=db
+MONGO_USER=db_user
+MONGO_PASSWORD=db_password
 
