--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-version: '3.8'
-
 networks:
   network:
     external: true
@@ -9,15 +7,13 @@ volumes:
 
 services:
   mongodb:
-    image: mongo:latest
-    container_name: mongodb
+    # ... existing config ...
     environment:
-      MONGO_INITDB_ROOT_USERNAME: ${MONGO_USER}
-      MONGO_INITDB_ROOT_PASSWORD: ${MONGO_PASSWORD}
+      MONGO_INITDB_ROOT_USERNAME: root
+      MONGO_INITDB_ROOT_PASSWORD: root_password
       MONGO_INITDB_DATABASE: ${MONGO_DB}
-    ports:
-      - '${MONGO_PORT}:27017'
+      MONGO_USER: ${MONGO_USER}
+      MONGO_PASSWORD: ${MONGO_PASSWORD}
     volumes:
       - mongo_data:/data/db
-    networks:
-      - network
+      - ./mongo-init.js:/docker-entrypoint-initdb.d/mongo-init.js:ro
